Fixed the styling errors and finalized the page alignment

--- a/client/src/components/screens/UserProfile.css
+++ b/client/src/components/screens/UserProfile.css
@@ -1,10 +1,10 @@
-.userprofileClass{
-    width: 100%;
-    height:100%;
-    position:absolute;
+/* .userprofileClass{
+    /* width: 100%;
+    height:100%; */
+    /* position:absolute; */
     /* display:block; */
-    background-color: #22272E;
- }
+    /* background-color: #22272E;
+ } */ */
 
  #userprofilecaption{
     text-align: center;
@@ -196,4 +196,8 @@
 #sixthButt:hover{
    background-color: bisque;
 }
+
+
+   
+   
 
